Version 1.4 - 2015-05-29
* Calculate payment date based on previous payment sent
* Add payments creation wizard
* Manage manual reject payment processus
* Allow to configure payment fail action accoding number of retry
* Allow to block payments for a party
* Add payable payment creation through batch

Version 1.3 - 2015-01-22
* Add reject fee invoices
* Allow to easily get the xml sepa message
* Mass validation of payment groups
* Add payment creation and payment treatment batch

Version 1.2 - 2014-07-01
* Changelog file creation