@@ -8,6 +8,7 @@ depends:
     account_payment
 # TODO : remove premium dependency
     premium
+    report_engine
     account_cog
 xml:
     icon.xml
