@@ -1,3 +1,5 @@
+* Allow to generate a report when payment is rejected
+
 Version 1.4 - 2015-05-29
 * Calculate payment date based on previous payment sent
 * Add payments creation wizard
